Behind the Scenes PC Display Changes - Moved PC Box HTML into DOM-generation-script.js, a module for generating large chunks of HTML on startup - Added data attributes to PC and Party pokemon to denote where they are stored, and at what index - Fixed up some for loops to declare iterator variables as, well, variables - Updated Js function displayCreature() to take in a config variable with the aforementioned data attributes - Added style changes to boxControls to make it more appealing, such as changing button sizes - Added borders to boxCreature tags

--- a/ui/stylesheets/boxes-style.css
+++ b/ui/stylesheets/boxes-style.css
@@ -10,6 +10,7 @@
 
 #boxControls {
     display: grid;
+    margin-bottom: 5pt;
 }
 
 #backBoxBtn {
@@ -18,6 +19,8 @@
 
 #pcBoxNum {
     grid-column: 2;
+    text-align: center;
+    width: calc(45vw/3);
 }
 
 #frwdBoxBtn {
@@ -26,6 +29,11 @@
 
 .boxBtn {
     width: calc(45vw/3);
+}
+
+.boxCreature {
+    border: 0.1vw solid; 
+    outline: black;
 }
 
 .row-0 {
