--- a/ui/stylesheets/display-style.css
+++ b/ui/stylesheets/display-style.css
@@ -4,6 +4,10 @@
     width: 45vw;
 }
 
+#pokemon {
+    vertical-align: top;
+}
+
 label {
     user-select: none;
 }
